# triage_shadow_system_meta

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  inference.py  openenv.yaml  pip_list.txt  pyproject.toml  requirements.txt  train.py
data/: tickets.py
env/: environment.py  graders.py  models.py
it_ticket_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model/: llm_agent.py  saved_model.pkl  schema.py  sft_model.py
server/: app.py
tasks/: features.py  graders.py
